# kumeo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  llm-context.md
.github/workflows/: ci.yml
branding/: kumeo-brand.scss  pitch-elevator.md  ux-guidelines.md
compiler/: Cargo.toml  Dockerfile  build.rs  deny.toml
compiler/compiler/templates/agents/llm/: README.md.tera
compiler/spec/: language_specification.md
compiler/src/: ast.rs  error.rs  kumeo.lalrpop  lexer.rs  lib.rs  logging.rs  main.rs  parser.rs  parser_test.rs  semantic.rs
compiler/src/ast/: mod.rs  types.rs
compiler/src/codegen/: agent.rs  code_generator.rs  kubernetes.rs  kubernetes_generator.rs  mod.rs  python_generator.rs  rust_generator.rs  taskfile.rs  template_manager.rs  template_processor.rs
compiler/src/parser/: error.rs  grammar.pest  mod.rs  parser.rs
compiler/src/resource/: config.rs  error.rs  git.rs  http.rs  local.rs  manager.rs  mod.rs  s3.rs
compiler/src/semantic/: analyzer.rs  mod.rs
compiler/templates/: Taskfile.yml.tera
compiler/templates/agents/llm/kubernetes/: deployment.yaml.tera
compiler/templates/agents/python/Dockerfile.tera/: Dockerfile.tera
compiler/templates/agents/python/MLModel/: README.md.tera  pyproject.toml.tera
compiler/templates/agents/python/MLModel/src/kumeo_agent_{{agent_name | lower}}/: __init__.py.tera  agent.py.tera
compiler/templates/agents/rust/DataProcessor/: Cargo.toml.tera
compiler/templates/agents/rust/DataProcessor/src/: agent.rs.tera  config.rs.tera  lib.rs.tera  processor.rs.tera  validator.rs.tera
compiler/templates/agents/rust/DecisionMatrix/: Cargo.toml.tera
compiler/templates/agents/rust/DecisionMatrix/src/: agent.rs.tera  config.rs.tera  lib.rs.tera  rules.rs.tera
compiler/templates/agents/rust/Dockerfile.tera/: Dockerfile.tera
compiler/templates/agents/rust/HumanReview/: Cargo.toml.tera
compiler/templates/agents/rust/HumanReview/src/: agent.rs.tera  config.rs.tera  lib.rs.tera  review.rs.tera
compiler/templates/agents/rust/LLM/: Cargo.toml.tera  build.rs.tera
compiler/templates/agents/rust/LLM/src/: agent.rs.tera  config.rs.tera  lib.rs.tera  llm_client.rs.tera
compiler/templates/agents/rust/Router/: Cargo.toml.tera
compiler/templates/agents/rust/Router/src/: agent.rs.tera  config.rs.tera  lib.rs.tera  routes.rs.tera
compiler/templates/kubernetes/: configmap.yaml.tmpl  deployment.yaml.tmpl  service.yaml.tmpl
compiler/templates/kubernetes/helm/: Chart.yaml  Chart.yaml.tera  requirements.yaml  values-agent.yaml.tera  values-minio.yaml  values-nats.yaml  values.yaml.tera
compiler/templates/kubernetes/helm/examples/: values-full.yaml.tera
compiler/templates/kubernetes/helm/templates/: NOTES.txt  NOTES.txt.tera  _helpers.tpl  configmap.yaml  configmap.yaml.tera  deployment.yaml  deployment.yaml.tera  service.yaml  service.yaml.tera
compiler/templates/python/: main.py.tera  pyproject.toml.tera  python.Dockerfile.tera
compiler/templates/python/agents/: agent_template.py.tera  base_agent.py.tera  ml_model.py.tmpl
compiler/templates/python/kumeo_runtime/: __init__.py  client.py  exceptions.py  types.py
compiler/templates/rust/: Cargo.toml.tera  rust.Dockerfile.tera
compiler/templates/rust/agents/: llm.rs.tmpl  router.rs.tmpl
compiler/templates/rust/src/: main.rs.tera
compiler/templates/rust/src/agents/: llm_agent.rs.tera  mod.rs.tera
compiler/templates/rust/src/kumeo_runtime/: client.rs  error.rs  mod.rs  types.rs
compiler/templates/rust/src/utils/: runtime_client.rs.tera
compiler/templates/tasks/: build.yml.tera
compiler/templates/tasks/agents/rust/: build.yml.tera
compiler/templates/tasks/deploy/: agents.yml.tera  helm.yml.tera
compiler/templates/tasks/setup/: dependencies.yml.tera
compiler/tests/: agent_id_validation_test.rs  codegen_test.rs  context_test.rs  kubernetes_generator_test.rs  lexer_test.rs  lib.rs  monitor_deployment_test.rs  parser_test.rs  python_generator_test.rs  rust_generator_test.rs  semantic_test.rs  semantic_validation_test.rs  subworkflow_test.rs  template_manager_test.rs  test_utils.rs
compiler/tests/ast/: mod.rs
compiler/tests/codegen/: agent_tests.rs  kubernetes_tests.rs  mod.rs  taskfile_tests.rs  template_processor_tests.rs
compiler/tests/parser/: error_handling_tests.rs  mod.rs  subworkflow_tests.rs  workflow_tests.rs
compiler/tests/semantic/: agent_validation.rs  mod.rs  subworkflow_validation.rs  workflow_validation.rs
design/: architecture.md  implementation_roadmap.md
docs/: _config.yml  getting-started.md  index.html
docs/_sass/color_schemes/: kumeo.scss
docs/docs/: architecture.md  getting-started.md  implementation_roadmap.md  index.md
examples/: example_workflow.kumeo  health_monitoring_system.kumeo  simple_workflow.kumeo  test_parser.rs
kumeo-language-extension/: language-configuration.json  package.json
kumeo-language-extension/syntaxes/: kumeo.tmLanguage.json
runtime/: Cargo.toml  build.rs
runtime/proto/: runtime.proto
runtime/src/: config.rs  error.rs  lib.rs
runtime/src/messaging/: mod.rs
runtime/src/resources/: mod.rs
runtime/src/server/: mod.rs
