[package]
name = "kumeo-compiler"
version = "0.1.0"
edition = "2021"
description = "Compiler for the Kumeo DSL"
authors = ["Kumeo Contributors"]
license = "GPL-3.0-or-later"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
logos = "0.13.0"      # For lexing
thiserror = "1.0.40"  # Error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"    # JSON serialization
tempfile = "3.8.0"    # Temporary files for testing

# Logging and tracing
tracing = "0.1"       # Tracing library with structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] } # Subscriber implementation
tracing-appender = "0.2"    # File and non-blocking appenders
tracing-log = "0.1"        # Compatibility with log crate
tracing-error = "0.2"      # Error handling integration
tracing-tree = "0.2"       # Tree-like display for spans
ansi_term = "0.12"         # Terminal colors

# CLI dependencies (commented out for now to simplify testing)
# clap = { version = "4.3", features = ["derive"] } # CLI argument parsing

[features]
default = []

# Features temporarily simplified for lexer testing

[[bin]]
name = "kumeo"
path = "src/main.rs"
