[package]
name = "kumeo-compiler"
version = "0.1.0"
edition = "2021"
description = "Compiler for the Kumeo DSL"
authors = ["Kumeo Contributors"]
license = "GPL-3.0-or-later"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
logos = "0.13.0"      # For lexing
thiserror = "1.0.40"  # Error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"    # JSON serialization
serde_yaml = "0.9"    # YAML serialization
tempfile = "3.8.0"    # Temporary files for testing
config = "0.13"       # Configuration management
tokio = { version = "1.0", features = ["full"] } # Async runtime
async-trait = "0.1"   # Async trait support
url = "2.4"           # URL parsing and manipulation
reqwest = { version = "0.11", features = ["json", "stream"] } # HTTP client
tokio-util = { version = "0.7", features = ["compat"] } # Async utilities
futures = "0.3"       # Futures support
dirs = "5.0"          # Cross-platform config paths
dirs-next = "2.0"     # Next-gen dirs
pathdiff = "0.2"      # Path manipulation
anyhow = { version = "1.0", features = ["backtrace"] }  # Error handling with backtraces
once_cell = "1.18"    # Lazy static initialization
temp-dir = "0.1"      # Temporary directories
sha2 = "0.10"         # Hashing for cache validation
hex = "0.4"           # Hex encoding
clap = { version = "4.4", features = ["derive", "env"] }  # Command line parsing
console = "0.15"      # Console output styling
indoc = "2.0"         # Indented string literals
shellexpand = "3.1"   # Shell-like path expansion

# Logging and tracing
tracing = "0.1"       # Tracing library with structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] } # Subscriber implementation
tracing-appender = "0.2"    # File and non-blocking appenders
tracing-log = "0.1"        # Compatibility with log crate
tracing-error = "0.2"      # Error handling integration
tracing-tree = "0.2"       # Tree-like display for spans
ansi_term = "0.12"         # Terminal colors

# Template engine
tera = { version = "1.20.0", features = ["builtins", "chrono"] }  # Jinja2-like template engine for Rust
chrono = { version = "0.4", features = ["serde"] }
heck = "0.4"  # Case conversion utilities
lazy_static = "1.4"  # For static template initialization

[features]
# No default features for now

[[bin]]
name = "kumeo"
path = "src/main.rs"
