[package]
name = "kumeo-runtime"
version = "0.1.0"
edition = "2021"
description = "Kumeo Runtime for handling resources and communication"

[features]
default = ["nats"]
nats = ["dep:nats"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11"

# Protocol Buffers
tonic = { version = "0.8", features = ["tls"] }

# NATS (optional)
nats = { version = "0.24", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Resource handling
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tempfile = "3.0"
